--- a/unpas.html
+++ b/unpas.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <title>latihan membuat box model</title>
+    <title>latihan box model</title>
     <link rel="stylesheet" href="style.css">
 <head>
     <body>
