--- a/land-page/index.html
+++ b/land-page/index.html
@@ -10,7 +10,7 @@
     <nav class="navbar">
         <div class="container">
             <img src="foto/Logo.png" alt="logo" class="logo">
-            <span class="name">Aina coach </span> 
+            <span class="name">Aina coack </span> 
         </div> 
         <ul class="navbar-link">
             <li><a href="#" class="active">Home</a></li>
